src/test/ui/issues/issue-23217.stderr
error[E0599]: no variant or associated item named `A` found for type `SomeEnum` in the current scope
  --> $DIR/issue-23217.rs:2:19
   |
LL | pub enum SomeEnum {
   | ----------------- variant or associated item `A` not found here
LL |     B = SomeEnum::A,
   |                   ^
   |                   |
   |                   variant or associated item not found in `SomeEnum`
   |                   help: there is a variant with a similar name: `B`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
